force-app/main/default/objects/Asset/fields/Container_ID__c.field-meta.xml
<CustomField>
    <fullName>Container_ID__c</fullName>
    <label>Container ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>