force-app/main/default/objects/Asset/fields/Pilot_in_operation__c.field-meta.xml
<CustomField>
    <fullName>Pilot_in_operation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pilot project status</label>
    <referenceTo>Pilot__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>