force-app/main/default/objects/Asset/fields/Pilot_in_operation_status__c.field-meta.xml
<CustomField>
    <fullName>Pilot_in_operation_status__c</fullName>
    <formula>text(Pilot_in_operation__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pilot_in_operation - status</label>
    <type>Text</type>
</CustomField>