force-app/main/default/objects/Asset/fields/StatusPilotProject__c.field-meta.xml
<CustomField>
    <fullName>StatusPilotProject__c</fullName>
    <formula>text ( Pilot_in_operation__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StatusPilotProject</label>
    <type>Text</type>
</CustomField>