force-app/main/default/objects/Asset/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mexpert</fullName>
            </value>
            <value>
                <fullName>MexpertC</fullName>
            </value>
            <value>
                <fullName>Mexpert NA1</fullName>
            </value>
            <value>
                <fullName>MexpertC NA2</fullName>
            </value>
            <value>
                <fullName>MexpertC NA3</fullName>
            </value>
            <value>
                <fullName>MexpertC NA4</fullName>
            </value>
            <value>
                <fullName>Mexperience</fullName>
            </value>
            <value>
                <fullName>Mexplorer</fullName>
            </value>
            <value>
                <fullName>Mexplorer Asia</fullName>
            </value>
            <value>
                <fullName>Mexplorer Spain</fullName>
            </value>
            <value>
                <fullName>Mexplorer India</fullName>
            </value>
            <value>
                <fullName>MexplorerNA</fullName>
            </value>
            <value>
                <fullName>Bexpert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>