force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>Type__c</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>Container_ID__c</columns>
    <columns>Pilot_in_operation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Assets</label>
</ListView>