force-app/main/default/objects/Asset/listViews/Assets_in_operation.listView-meta.xml
<ListView>
    <fullName>Assets_in_operation</fullName>
    <columns>ASSET.NAME</columns>
    <columns>Type__c</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>Container_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>Assets in operation</label>
</ListView>