force-app/main/default/objects/Asset/listViews/In_operation.listView-meta.xml
<ListView>
    <fullName>In_operation</fullName>
    <columns>ASSET.NAME</columns>
    <columns>Type__c</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>Container_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>In operation</label>
</ListView>